--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: ⚛️ # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
 url: https://thomasfalconer.com # the base hostname & protocol for your site
-baseurl: # the subpath of your site, e.g. /blog/
+baseurl: / # the subpath of your site, e.g. if url is https://tdfalc.github.io, this would be /tdfalc/
 last_updated: true # set to true if you want to display last updated in the footer
 impressum_path:  # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
 
