--- a/_config.yml
+++ b/_config.yml
@@ -98,10 +98,10 @@ bing_site_verification:  # bing-site-verification ID (Bing Webmaster)
 # Blog
 # -----------------------------------------------------------------------------
 
-# blog_name: # blog_name will be displayed in your blog page
-# blog_nav_title: blog # blog must have a title for it to be displayed in the nav bar
-# blog_description: 
-# permalink: /blog/:year/:title/
+blog_name: "@tdfalc"
+blog_nav_title: blog # blog must have a title for it to be displayed in the nav bar
+blog_description: How effective is the Feynman technique?
+permalink: /blog/:year/:title/
 
 # Pagination
 pagination:
