Add coauthour links

--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -1,3 +1,11 @@
 "Mones":
   - firstname: ["Letif", "L.", "Letif Mones"]
     url: https://www.letifmones.com/
+
+"Kazempour":
+  - firstname: ["Jalal", "J.", "Jalal Kazempour"]
+    url: https://www.jalalkazempour.com/
+
+"Pinson":
+  - firstname: ["Pierre", "P.", "Pierre Pinson"]
+    url: https://pierrepinson.com/
