Finishing touches to initial rework

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,16 @@ __pycache__/
 # C extensions
 *.so
 static/styles/index.js
+
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
